--- a/main.html
+++ b/main.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+<body onload="getSize()" onresize="getSize()">
+	<div id="sizeInfo"> 
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
+</html>
 </html>
