--- a/main.html
+++ b/main.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-<body onload="getSize()" onresize="getSize()">
-	<div id="sizeInfo"> 
+	<div id="sizeInfo">
+		<h1>
+			<strong>Width: <span id="width">1000</span> and Height: <span id="height">660</span></strong>
+		</h1>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
-</html>
 </html>
